hard-gists/03d9c46c86691c9bb680/run.log
=== Docker Run Log for 03d9c46c86691c9bb680 ===
Started at: Mi 29. Okt 11:22:53 CET 2025

[2025-10-29 11:22:53] START: Running container for 03d9c46c86691c9bb680
[2025-10-29 11:22:53] SUCCESS: Container 65cb56864664d6a92ece6eefa26506e91109e86a96dde2ebf5b6682181f8a65c started for 03d9c46c86691c9bb680
=== Container logs for 03d9c46c86691c9bb680 ===
  File "/snippet.py", line 64
    print row
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 03d9c46c86691c9bb680 ===
[2025-10-29 11:22:55] INFO: Container 65cb56864664d6a92ece6eefa26506e91109e86a96dde2ebf5b6682181f8a65c has stopped
